--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: url("C:\Users\shubh\Downloads\shubh (2).jpg") ;
+    background: url("shubh.jpg") ;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
   body {
-  background: url("shubh (2).jpg") no-repeat center center fixed;
+  background: url("shubh.jpg") no-repeat center center fixed;
   background-size: cover;
   }
 
@@ -354,4 +354,5 @@ function exportToCSV(){
 </script>
 </body>
 </html>
+
 
